Resolved image squashed issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1021,3 +1021,68 @@ pre .prism-code.spectrum-Code  span.token.string{
         background-position: bottom center !important;
     }
 }
+
+.blog-title-height {
+    height: 40px !important;
+}
+
+@media screen and (min-width:1024px){
+    .featured-image{
+        width: auto !important;
+    }
+}
+@media screen and (width:1024px){
+    .featured-image{
+        width: 100% !important;
+    }
+}
+
+
+
+ @media screen and (max-width:1023px) {
+    .featured-image{
+        display: none !important;
+    }
+    .make-pdfs-searchable{
+        background:  url('../pages/images/Make_PDFs_searchable_tab.jpg');
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+
+    .generate_documents {
+        background:  url('../pages/images/generate_documents_tab.jpg');
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    .digging_out_data {
+        /* padding-left: 40px; */
+        background:  url('../pages/images/digging_out_data_tab.jpg');
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+  }
+
+
+  @media screen and (max-width:767px) and (min-width:320px){
+    .featured-image{
+        display: block !important;
+    }
+    .make-pdfs-searchable {
+        display: none;
+    }
+    .generate_documents {
+        display: none;
+    }
+    .digging_out_data {
+        display: none;
+    }
+  }
